--- a/website/pages/docs/json/parse.mdx
+++ b/website/pages/docs/json/parse.mdx
@@ -221,17 +221,10 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assertParse.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
+import typia from "typia";
 const json = JSON.stringify(
   ((generator) => {
-    const $generator = typia_1.default.random.generator;
+    const $generator = typia.random.generator;
     const $ro0 = (_recursive = false, _depth = 0) => ({
       id:
         (generator?.customs ?? $generator.customs)?.string?.([
@@ -271,107 +264,143 @@ const json = JSON.stringify(
     return $ro0();
   })(),
 );
-const parsed = ((input) => {
-  const assert = (input) => {
-    const __is = (input) => {
-      return (
-        "object" === typeof input &&
-        null !== input &&
-        "string" === typeof input.id &&
-        /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-          input.id,
-        ) &&
-        "string" === typeof input.email &&
-        /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-          input.email,
-        ) &&
-        "number" === typeof input.age &&
-        Math.floor(input.age) === input.age &&
+const parsed = (() => {
+  const $guard = typia.json.assertParse.guard;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100;
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.id &&
+      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+        input.id,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".id",
+            expected: 'string & Format<"uuid">',
+            value: input.id,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".id",
+          expected: '(string & Format<"uuid">)',
+          value: input.id,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.email &&
+      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+        input.email,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".email",
+            expected: 'string & Format<"email">',
+            value: input.email,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".email",
+          expected: '(string & Format<"email">)',
+          value: input.email,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.age &&
+      ((Math.floor(input.age) === input.age &&
         0 <= input.age &&
-        input.age <= 4294967295 &&
-        19 < input.age &&
-        input.age <= 100
-      );
-    };
-    if (false === __is(input))
-      ((input, _path, _exceptionable = true) => {
-        const $guard = typia_1.default.json.assertParse.guard;
-        const $ao0 = (input, _path, _exceptionable = true) =>
-          (("string" === typeof input.id &&
-            (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-              input.id,
-            ) ||
-              $guard(_exceptionable, {
-                path: _path + ".id",
-                expected: 'string & Format<"uuid">',
-                value: input.id,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".id",
-              expected: '(string & Format<"uuid">)',
-              value: input.id,
-            })) &&
-          (("string" === typeof input.email &&
-            (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-              input.email,
-            ) ||
-              $guard(_exceptionable, {
-                path: _path + ".email",
-                expected: 'string & Format<"email">',
-                value: input.email,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".email",
-              expected: '(string & Format<"email">)',
-              value: input.email,
-            })) &&
-          (("number" === typeof input.age &&
-            ((Math.floor(input.age) === input.age &&
-              0 <= input.age &&
-              input.age <= 4294967295) ||
-              $guard(_exceptionable, {
-                path: _path + ".age",
-                expected: 'number & Type<"uint32">',
-                value: input.age,
-              })) &&
-            (19 < input.age ||
-              $guard(_exceptionable, {
-                path: _path + ".age",
-                expected: "number & ExclusiveMinimum<19>",
-                value: input.age,
-              })) &&
-            (input.age <= 100 ||
-              $guard(_exceptionable, {
-                path: _path + ".age",
-                expected: "number & Maximum<100>",
-                value: input.age,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected:
-                '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-              value: input.age,
-            }));
-        return (
-          ((("object" === typeof input && null !== input) ||
-            $guard(true, {
+        input.age <= 4294967295) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: 'number & Type<"uint32">',
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (19 < input.age ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & ExclusiveMinimum<19>",
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (input.age <= 100 ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & Maximum<100>",
+            value: input.age,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".age",
+          expected:
+            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+          value: input.age,
+        },
+        _errorFactory,
+      ));
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  const __assert = (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
+        ((("object" === typeof input && null !== input) ||
+          $guard(
+            true,
+            {
               path: _path + "",
               expected: "IMember",
               value: input,
-            })) &&
-            $ao0(input, _path + "", true)) ||
-          $guard(true, {
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "IMember",
             value: input,
-          })
-        );
-      })(input, "$input", true);
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
     return input;
   };
-  input = JSON.parse(input);
-  return assert(input);
-})(json);
+  return (input, errorFactory) => __assert(JSON.parse(input), errorFactory);
+})()(json);
 console.log(json === JSON.stringify(parsed)); // true
 ```
   </Tab>
@@ -594,40 +623,30 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/createIsParse.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
+import typia from "typia";
+export const parseMember = (() => {
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100;
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  return (input) => {
+    input = JSON.parse(input);
+    return __is(input) ? input : null;
   };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.parseMember = void 0;
-const typia_1 = __importDefault(require("typia"));
-const parseMember = (input) => {
-  const is = (input) => {
-    return (
-      "object" === typeof input &&
-      null !== input &&
-      "string" === typeof input.id &&
-      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) &&
-      "string" === typeof input.email &&
-      /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100
-    );
-  };
-  input = JSON.parse(input);
-  return is(input) ? input : null;
-};
-exports.parseMember = parseMember;
+})();
 ```
   </Tab>
 </Tabs>
