--- a/website/pages/docs/json/schema.mdx
+++ b/website/pages/docs/json/schema.mdx
@@ -83,26 +83,12 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/application.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.MemberSchema = void 0;
-const typia_1 = __importDefault(require("typia"));
-exports.MemberSchema = {
+import typia from "typia";
+export const MemberSchema = {
   version: "3.0",
-  schemas: [
-    {
-      $ref: "#/components/schemas/IMember",
-    },
-  ],
   components: {
     schemas: {
       IMember: {
-        $id: "#/components/schemas/IMember",
         type: "object",
         properties: {
           id: {
@@ -119,18 +105,24 @@ exports.MemberSchema = {
           },
           age: {
             type: "integer",
-            minimum: 19,
             exclusiveMinimum: true,
+            minimum: 19,
             maximum: 100,
             title: "Age of the member",
             description:
               "Age of the member.\n\nFor reference, only adult can be a member.",
           },
         },
+        nullable: false,
         required: ["id", "email", "age"],
       },
     },
   },
+  schemas: [
+    {
+      $ref: "#/components/schemas/IMember",
+    },
+  ],
 };
 ```
   </Tab>
@@ -230,22 +222,9 @@ interface Special {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/application-comment-tags.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.SpecialTagSchema = void 0;
-const typia_1 = __importDefault(require("typia"));
-exports.SpecialTagSchema = {
+import typia from "typia";
+export const SpecialTagSchema = {
   version: "3.1",
-  schemas: [
-    {
-      $ref: "#/components/schemas/Special",
-    },
-  ],
   components: {
     schemas: {
       Special: {
@@ -259,10 +238,9 @@ exports.SpecialTagSchema = {
           },
           number: {
             type: "number",
-            minimum: 19,
             exclusiveMinimum: true,
+            minimum: 19,
             maximum: 100,
-            default: 30,
             title: "You can limit the range of number",
             description: "You can limit the range of number.",
           },
@@ -270,13 +248,13 @@ exports.SpecialTagSchema = {
             oneOf: [
               {
                 type: "string",
-                maxLength: 24,
                 minLength: 3,
+                maxLength: 24,
               },
               {
                 type: "string",
-                maxLength: 100,
                 minLength: 40,
+                maxLength: 100,
               },
             ],
             title: "You can limit the length of string",
@@ -292,12 +270,12 @@ exports.SpecialTagSchema = {
           format: {
             oneOf: [
               {
-                type: "null"
+                type: "null",
               },
               {
                 type: "string",
                 format: "date-time",
-              }
+              },
             ],
             title: "You can limit the format of string",
             description: "You can limit the format of string.",
@@ -318,6 +296,11 @@ exports.SpecialTagSchema = {
       },
     },
   },
+  schemas: [
+    {
+      $ref: "#/components/schemas/Special",
+    },
+  ],
 };
 ```
   </Tab>
@@ -357,14 +340,10 @@ typia.json.application<[IAccount]>();
 ```
   </Tab>
   <Tab>
-```javascript copy filename="examples/bin/json-schema-custom.js" showLineNumbers {15, 19}
+```javascript copy filename="examples/bin/json-schema-custom.js" showLineNumbers {11, 15}
+import typia from "typia";
 ({
   version: "3.1",
-  schemas: [
-    {
-      $ref: "#/components/schemas/IAccount",
-    },
-  ],
   components: {
     schemas: {
       IAccount: {
@@ -383,7 +362,13 @@ typia.json.application<[IAccount]>();
       },
     },
   },
+  schemas: [
+    {
+      $ref: "#/components/schemas/IAccount",
+    },
+  ],
 });
+
 ```
   </Tab>
 </Tabs>
@@ -410,7 +395,7 @@ interface Nested {
   uint64: bigint & tags.Type<"uint64">;
 }
 
-typia.json.application<[Something], "ajv">();
+typia.json.application<[Something]>();
 ```
   </Tab>
   <Tab>
@@ -439,30 +424,17 @@ import typia from "typia";
 interface Native {
   date: Date;
 }
-typia.json.application<[Native], "ajv">();
+typia.json.application<[Native]>();
 ```
   </Tab>
   <Tab>
 ```typescript filename="json.application.native.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
+import typia from "typia";
 ({
   version: "3.1",
-  schemas: [
-    {
-      $ref: "#/components/schemas/Native",
-    },
-  ],
   components: {
     schemas: {
       Native: {
-        $id: "#/components/schemas/Native",
         type: "object",
         properties: {
           date: {
@@ -474,6 +446,11 @@ const typia_1 = __importDefault(require("typia"));
       },
     },
   },
+  schemas: [
+    {
+      $ref: "#/components/schemas/Native",
+    },
+  ],
 });
 ```
   </Tab>
