--- a/website/pages/docs/json/stringify.mdx
+++ b/website/pages/docs/json/stringify.mdx
@@ -81,34 +81,27 @@ const json: string | null = typia.json.isStringify(department);
 console.log(json); // not null, but string
 
 interface IDepartment {
-    id: string & tags.Format<"uuid">;
-    name: string & tags.MinLength<3>;
-    limit: number & tags.Type<"int32">;
-    clerks: IClerk[];
+  id: string & tags.Format<"uuid">;
+  name: string & tags.MinLength<3>;
+  limit: number & tags.Type<"int32">;
+  clerks: IClerk[];
 }
 interface IClerk {
-    name: string;
-    age: number 
-        & tags.Type<"uint32"> 
-        & tags.ExclusiveMinimum<19> 
-        & tags.Maximum<100>;
-    authority: number;
-    joined_at: string & tags.Format<"date">;
+  name: string;
+  age: number 
+    & tags.Type<"uint32"> 
+    & tags.ExclusiveMinimum<19> 
+    & tags.Maximum<100>;
+  authority: number;
+  joined_at: string & tags.Format<"date">;
 }
 ```
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/isStringify.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
+import typia from "typia";
 const department = ((generator) => {
-  const $generator = typia_1.default.random.generator;
+  const $generator = typia.random.generator;
   const $ro0 = (_recursive = false, _depth = 0) => ({
     id:
       (generator?.customs ?? $generator.customs)?.string?.([
@@ -177,56 +170,45 @@ const department = ((generator) => {
   });
   return $ro0();
 })();
-const json = ((input) => {
-  const is = (input) => {
-    const $io0 = (input) =>
-      "string" === typeof input.id &&
-      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) &&
-      "string" === typeof input.name &&
-      3 <= input.name.length &&
-      "number" === typeof input.limit &&
-      Math.floor(input.limit) === input.limit &&
-      -2147483648 <= input.limit &&
-      input.limit <= 2147483647 &&
-      Array.isArray(input.clerks) &&
-      input.clerks.every(
-        (elem) => "object" === typeof elem && null !== elem && $io1(elem),
-      );
-    const $io1 = (input) =>
-      "string" === typeof input.name &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100 &&
-      "number" === typeof input.authority &&
-      !Number.isNaN(input.authority) &&
-      "string" === typeof input.joined_at &&
-      /^(\d{4})-(\d{2})-(\d{2})$/.test(input.joined_at);
-    return "object" === typeof input && null !== input && $io0(input);
-  };
-  const stringify = (input) => {
-    const $io1 = (input) =>
-      "string" === typeof input.name &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100 &&
-      "number" === typeof input.authority &&
-      "string" === typeof input.joined_at &&
-      /^(\d{4})-(\d{2})-(\d{2})$/.test(input.joined_at);
-    const $string = typia_1.default.json.isStringify.string;
-    const $so0 = (input) =>
-      `{"id":${$string(input.id)},"name":${$string(input.name)},"limit":${input.limit},"clerks":${`[${input.clerks.map((elem) => `{"name":${$string(elem.name)},"age":${elem.age},"authority":${elem.authority},"joined_at":${$string(elem.joined_at)}}`).join(",")}]`}}`;
-    return $so0(input);
-  };
-  return is(input) ? stringify(input) : null;
-})(department);
+const json = (() => {
+  const $string = typia.json.isStringify.string;
+  const $number = typia.json.isStringify.number;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.name &&
+    3 <= input.name.length &&
+    "number" === typeof input.limit &&
+    Math.floor(input.limit) === input.limit &&
+    -2147483648 <= input.limit &&
+    input.limit <= 2147483647 &&
+    Array.isArray(input.clerks) &&
+    input.clerks.every(
+      (elem) => "object" === typeof elem && null !== elem && $io1(elem),
+    );
+  const $io1 = (input) =>
+    "string" === typeof input.name &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100 &&
+    "number" === typeof input.authority &&
+    !Number.isNaN(input.authority) &&
+    "string" === typeof input.joined_at &&
+    /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/.test(input.joined_at);
+  const $so0 = (input) =>
+    `{"id":${$string(input.id)},"name":${$string(input.name)},"limit":${$number(input.limit)},"clerks":${`[${input.clerks.map((elem) => $so1(elem)).join(",")}]`}}`;
+  const $so1 = (input) =>
+    `{"name":${$string(input.name)},"age":${$number(input.age)},"authority":${$number(input.authority)},"joined_at":${$string(input.joined_at)}}`;
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  const __stringify = (input) => $so0(input);
+  return (input) => (__is(input) ? __stringify(input) : null);
+})()(department);
 console.log(json); // not null, but string
 ```
   </Tab>
@@ -321,211 +303,274 @@ interface IClerk {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/createAssertStringify.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.assertDepartment = void 0;
-const typia_1 = __importDefault(require("typia"));
-const assertDepartment = (input) => {
-  const assert = (input) => {
-    const __is = (input) => {
-      const $io0 = (input) =>
-        "string" === typeof input.id &&
-        /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-          input.id,
-        ) &&
-        "string" === typeof input.name &&
-        3 <= input.name.length &&
-        "number" === typeof input.limit &&
-        Math.floor(input.limit) === input.limit &&
+import typia from "typia";
+export const assertDepartment = (() => {
+  const $guard = typia.json.createAssertStringify.guard;
+  const $string = typia.json.createAssertStringify.string;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.name &&
+    3 <= input.name.length &&
+    "number" === typeof input.limit &&
+    Math.floor(input.limit) === input.limit &&
+    -2147483648 <= input.limit &&
+    input.limit <= 2147483647 &&
+    Array.isArray(input.clerks) &&
+    input.clerks.every(
+      (elem) => "object" === typeof elem && null !== elem && $io1(elem),
+    );
+  const $io1 = (input) =>
+    "string" === typeof input.name &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100 &&
+    "number" === typeof input.authority &&
+    !Number.isNaN(input.authority) &&
+    "string" === typeof input.joined_at &&
+    /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/.test(input.joined_at);
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.id &&
+      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+        input.id,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".id",
+            expected: 'string & Format<"uuid">',
+            value: input.id,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".id",
+          expected: '(string & Format<"uuid">)',
+          value: input.id,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.name &&
+      (3 <= input.name.length ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".name",
+            expected: "string & MinLength<3>",
+            value: input.name,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".name",
+          expected: "(string & MinLength<3>)",
+          value: input.name,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.limit &&
+      ((Math.floor(input.limit) === input.limit &&
         -2147483648 <= input.limit &&
-        input.limit <= 2147483647 &&
-        Array.isArray(input.clerks) &&
-        input.clerks.every(
-          (elem) => "object" === typeof elem && null !== elem && $io1(elem),
-        );
-      const $io1 = (input) =>
-        "string" === typeof input.name &&
-        "number" === typeof input.age &&
-        Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295 &&
-        19 < input.age &&
-        input.age <= 100 &&
-        "number" === typeof input.authority &&
-        !Number.isNaN(input.authority) &&
-        "string" === typeof input.joined_at &&
-        /^(\d{4})-(\d{2})-(\d{2})$/.test(input.joined_at);
-      return "object" === typeof input && null !== input && $io0(input);
-    };
-    if (false === __is(input))
-      ((input, _path, _exceptionable = true) => {
-        const $guard = typia_1.default.json.createAssertStringify.guard;
-        const $ao0 = (input, _path, _exceptionable = true) =>
-          (("string" === typeof input.id &&
-            (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-              input.id,
-            ) ||
-              $guard(_exceptionable, {
-                path: _path + ".id",
-                expected: 'string & Format<"uuid">',
-                value: input.id,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".id",
-              expected: '(string & Format<"uuid">)',
-              value: input.id,
-            })) &&
-          (("string" === typeof input.name &&
-            (3 <= input.name.length ||
-              $guard(_exceptionable, {
-                path: _path + ".name",
-                expected: "string & MinLength<3>",
-                value: input.name,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".name",
-              expected: "(string & MinLength<3>)",
-              value: input.name,
-            })) &&
-          (("number" === typeof input.limit &&
-            ((Math.floor(input.limit) === input.limit &&
-              -2147483648 <= input.limit &&
-              input.limit <= 2147483647) ||
-              $guard(_exceptionable, {
-                path: _path + ".limit",
-                expected: 'number & Type<"int32">',
-                value: input.limit,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".limit",
-              expected: '(number & Type<"int32">)',
-              value: input.limit,
-            })) &&
-          (((Array.isArray(input.clerks) ||
-            $guard(_exceptionable, {
-              path: _path + ".clerks",
-              expected: "Array<IClerk>",
-              value: input.clerks,
-            })) &&
-            input.clerks.every(
-              (elem, _index1) =>
-                ((("object" === typeof elem && null !== elem) ||
-                  $guard(_exceptionable, {
-                    path: _path + ".clerks[" + _index1 + "]",
-                    expected: "IClerk",
-                    value: elem,
-                  })) &&
-                  $ao1(
-                    elem,
-                    _path + ".clerks[" + _index1 + "]",
-                    true && _exceptionable,
-                  )) ||
-                $guard(_exceptionable, {
-                  path: _path + ".clerks[" + _index1 + "]",
-                  expected: "IClerk",
-                  value: elem,
-                }),
+        input.limit <= 2147483647) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".limit",
+            expected: 'number & Type<"int32">',
+            value: input.limit,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".limit",
+          expected: '(number & Type<"int32">)',
+          value: input.limit,
+        },
+        _errorFactory,
+      )) &&
+    (((Array.isArray(input.clerks) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".clerks",
+          expected: "Array<IClerk>",
+          value: input.clerks,
+        },
+        _errorFactory,
+      )) &&
+      input.clerks.every(
+        (elem, _index2) =>
+          ((("object" === typeof elem && null !== elem) ||
+            $guard(
+              _exceptionable,
+              {
+                path: _path + ".clerks[" + _index2 + "]",
+                expected: "IClerk",
+                value: elem,
+              },
+              _errorFactory,
+            )) &&
+            $ao1(
+              elem,
+              _path + ".clerks[" + _index2 + "]",
+              true && _exceptionable,
             )) ||
-            $guard(_exceptionable, {
-              path: _path + ".clerks",
-              expected: "Array<IClerk>",
-              value: input.clerks,
-            }));
-        const $ao1 = (input, _path, _exceptionable = true) =>
-          ("string" === typeof input.name ||
-            $guard(_exceptionable, {
-              path: _path + ".name",
-              expected: "string",
-              value: input.name,
-            })) &&
-          (("number" === typeof input.age &&
-            ((Math.floor(input.age) === input.age &&
-              0 <= input.age &&
-              input.age <= 4294967295) ||
-              $guard(_exceptionable, {
-                path: _path + ".age",
-                expected: 'number & Type<"uint32">',
-                value: input.age,
-              })) &&
-            (19 < input.age ||
-              $guard(_exceptionable, {
-                path: _path + ".age",
-                expected: "number & ExclusiveMinimum<19>",
-                value: input.age,
-              })) &&
-            (input.age <= 100 ||
-              $guard(_exceptionable, {
-                path: _path + ".age",
-                expected: "number & Maximum<100>",
-                value: input.age,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected:
-                '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-              value: input.age,
-            })) &&
-          (("number" === typeof input.authority &&
-            !Number.isNaN(input.authority)) ||
-            $guard(_exceptionable, {
-              path: _path + ".authority",
-              expected: "number",
-              value: input.authority,
-            })) &&
-          (("string" === typeof input.joined_at &&
-            (/^(\d{4})-(\d{2})-(\d{2})$/.test(input.joined_at) ||
-              $guard(_exceptionable, {
-                path: _path + ".joined_at",
-                expected: 'string & Format<"date">',
-                value: input.joined_at,
-              }))) ||
-            $guard(_exceptionable, {
-              path: _path + ".joined_at",
-              expected: '(string & Format<"date">)',
-              value: input.joined_at,
-            }));
-        return (
-          ((("object" === typeof input && null !== input) ||
-            $guard(true, {
+          $guard(
+            _exceptionable,
+            {
+              path: _path + ".clerks[" + _index2 + "]",
+              expected: "IClerk",
+              value: elem,
+            },
+            _errorFactory,
+          ),
+      )) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".clerks",
+          expected: "Array<IClerk>",
+          value: input.clerks,
+        },
+        _errorFactory,
+      ));
+  const $ao1 = (input, _path, _exceptionable = true) =>
+    ("string" === typeof input.name ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".name",
+          expected: "string",
+          value: input.name,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.age &&
+      ((Math.floor(input.age) === input.age &&
+        0 <= input.age &&
+        input.age <= 4294967295) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: 'number & Type<"uint32">',
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (19 < input.age ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & ExclusiveMinimum<19>",
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (input.age <= 100 ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & Maximum<100>",
+            value: input.age,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".age",
+          expected:
+            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+          value: input.age,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.authority && !Number.isNaN(input.authority)) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".authority",
+          expected: "number",
+          value: input.authority,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.joined_at &&
+      (/^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/.test(
+        input.joined_at,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".joined_at",
+            expected: 'string & Format<"date">',
+            value: input.joined_at,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".joined_at",
+          expected: '(string & Format<"date">)',
+          value: input.joined_at,
+        },
+        _errorFactory,
+      ));
+  const $so0 = (input) =>
+    `{"id":${$string(input.id)},"name":${$string(input.name)},"limit":${input.limit},"clerks":${`[${input.clerks.map((elem) => $so1(elem)).join(",")}]`}}`;
+  const $so1 = (input) =>
+    `{"name":${$string(input.name)},"age":${input.age},"authority":${input.authority},"joined_at":${$string(input.joined_at)}}`;
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  const __assert = (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
+        ((("object" === typeof input && null !== input) ||
+          $guard(
+            true,
+            {
               path: _path + "",
               expected: "IDepartment",
               value: input,
-            })) &&
-            $ao0(input, _path + "", true)) ||
-          $guard(true, {
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "IDepartment",
             value: input,
-          })
-        );
-      })(input, "$input", true);
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
     return input;
   };
-  const stringify = (input) => {
-    const $io1 = (input) =>
-      "string" === typeof input.name &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100 &&
-      "number" === typeof input.authority &&
-      "string" === typeof input.joined_at &&
-      /^(\d{4})-(\d{2})-(\d{2})$/.test(input.joined_at);
-    const $string = typia_1.default.json.createAssertStringify.string;
-    const $so0 = (input) =>
-      `{"id":${$string(input.id)},"name":${$string(input.name)},"limit":${input.limit},"clerks":${`[${input.clerks.map((elem) => `{"name":${$string(elem.name)},"age":${elem.age},"authority":${elem.authority},"joined_at":${$string(elem.joined_at)}}`).join(",")}]`}}`;
-    return $so0(input);
+  const __stringify = (input) => $so0(input);
+  return (input, errorFactory) => {
+    __assert(input, errorFactory);
+    return __stringify(input);
   };
-  return stringify(assert(input));
-};
-exports.assertDepartment = assertDepartment;
+})();
 ```
   </Tab>
 </Tabs>
@@ -541,7 +586,7 @@ For reference, `class-transformer` is the most famous library used in `NestJS` w
  - `fast-json-stringify` requires [JSON schema definition](https://github.com/samchon/typia/blob/master/test/schemas/json/swagger/ObjectHierarchical.json).
  - `class-validator` requires [DTO class with decorator function calls](https://github.com/samchon/typia/blob/master/benchmark/structures/class-validator/ClassValidatorObjectHierarchical.ts).
 
-![Stringify Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/stringify.svg)
+![Stringify Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics/images/stringify.svg)
 
 > Measured on [AMD Ryzen 9 7940HS, Rog Flow x13](https://github.com/samchon/typia/tree/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics#stringify)
 
@@ -561,6 +606,6 @@ Most operations in NodeJS server are asynchronously executed in background threa
 
 I'll show you the benchmark result that, how JSON serizliation speed affects on the server performance.
 
-![Server Benchmark](https://raw.githubusercontent.com/samchon/typia/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/server.svg)
+![Server Benchmark](https://raw.githubusercontent.com/samchon/typia/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics/images/server.svg)
 
 > Measured on [AMD Ryzen 9 7940HS, Rog Flow x13](https://github.com/samchon/typia/tree/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics#server)
