--- a/website/pages/docs/protobuf/decode.mdx
+++ b/website/pages/docs/protobuf/decode.mdx
@@ -240,17 +240,10 @@ typia.protobuf.decode<ICustomer>(encoded);
   </Tab>
   <Tab>
 ```javascript copy filename="protobuf.decode.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
+import typia from "typia";
 const data = ((generator) => {
-  const $generator = typia_1.default.random.generator;
-  const $pick = typia_1.default.random.pick;
+  const $generator = typia.random.generator;
+  const $pick = typia.random.pick;
   const $ro0 = (_recursive = false, _depth = 0) => ({
     id:
       (generator?.customs ?? $generator.customs)?.number?.([
@@ -353,11 +346,11 @@ const data = ((generator) => {
   });
   return $ro0();
 })();
-const encoded = ((input) => {
-  const $throws = typia_1.default.protobuf.encode.throws;
-  const $Sizer = typia_1.default.protobuf.encode.Sizer;
-  const $Writer = typia_1.default.protobuf.encode.Writer;
-  const encoder = (writer) => {
+const encoded = (() => {
+  const $throws = typia.protobuf.encode.throws;
+  const $Sizer = typia.protobuf.encode.Sizer;
+  const $Writer = typia.protobuf.encode.Writer;
+  const encoder = (writer, input) => {
     const $peo0 = (input) => {
       // property "id";
       writer.uint32(8);
@@ -480,7 +473,9 @@ const encoded = ((input) => {
           input.ip,
         )) &&
       "string" === typeof input.time &&
-      !isNaN(new Date(input.time).getTime());
+      /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])(T|\s)([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9](?:\.[0-9]{1,9})?(Z|[+-]([01][0-9]|2[0-3]):[0-5][0-9])$/i.test(
+        input.time,
+      );
     const $iu0 = (input) =>
       (() => {
         if ("cat" === input.type) return $io1(input);
@@ -491,12 +486,14 @@ const encoded = ((input) => {
     $peo0(input);
     return writer;
   };
-  const sizer = encoder(new $Sizer());
-  const writer = encoder(new $Writer(sizer));
-  return writer.buffer();
-})(data);
-((input) => {
-  const $Reader = typia_1.default.protobuf.decode.Reader;
+  return (input) => {
+    const sizer = encoder(new $Sizer(), input);
+    const writer = encoder(new $Writer(sizer), input);
+    return writer.buffer();
+  };
+})()(data);
+(() => {
+  const $Reader = typia.protobuf.decode.Reader;
   const $pdo0 = (reader, length = -1) => {
     length = length < 0 ? reader.size() : reader.index() + length;
     const output = {
@@ -666,9 +663,11 @@ const encoded = ((input) => {
     }
     return output;
   };
-  const reader = new $Reader(input);
-  return $pdo0(reader);
-})(encoded);
+  return (input) => {
+    const reader = new $Reader(input);
+    return $pdo0(reader);
+  };
+})()(encoded);
 ```
   </Tab>
 </Tabs>
@@ -803,17 +802,9 @@ interface ICustomerLogin {
   </Tab>
   <Tab>
 ```javascript copy filename="protobuf.createDecode.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.encode = void 0;
-const typia_1 = __importDefault(require("typia"));
-const encode = (input) => {
-  const $Reader = typia_1.default.protobuf.createDecode.Reader;
+import typia from "typia";
+export const encode = (() => {
+  const $Reader = typia.protobuf.createDecode.Reader;
   const $pdo0 = (reader, length = -1) => {
     length = length < 0 ? reader.size() : reader.index() + length;
     const output = {
@@ -983,10 +974,11 @@ const encode = (input) => {
     }
     return output;
   };
-  const reader = new $Reader(input);
-  return $pdo0(reader);
-};
-exports.encode = encode;
+  return (input) => {
+    const reader = new $Reader(input);
+    return $pdo0(reader);
+  };
+})();
 ```
   </Tab>
 </Tabs>
