--- a/website/pages/docs/pure.mdx
+++ b/website/pages/docs/pure.mdx
@@ -370,196 +370,277 @@ export const assertArticle = typia.createAssert<IBbsArticle>();
   </Tab>
   <Tab>
 ```javascript filename="assertArticle.js" showLineNumbers
-"use strict";
-var __importDefault = (this && this.__importDefault) || function (mod) {
-  return (mod && mod.__esModule) ? mod : { "default": mod };
-};
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.assertArticle = void 0;
-const typia_1 = __importDefault(require("typia"));
-const assertArticle = (input) => {
-  const __is = (input) => {
-    const $io0 = (input) =>
-      "string" === typeof input.id &&
-      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+import typia from "typia";
+export const assertArticle = (() => {
+  const $guard = typia.createAssert.guard;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    (null === input.files ||
+      (Array.isArray(input.files) &&
+        input.files.every(
+          (elem) => "object" === typeof elem && null !== elem && $io1(elem),
+        ))) &&
+    (null === input.title ||
+      ("string" === typeof input.title &&
+        5 <= input.title.length &&
+        input.title.length <= 100)) &&
+    "string" === typeof input.body &&
+    "string" === typeof input.created_at &&
+    /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])(T|\s)([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9](?:\.[0-9]{1,9})?(Z|[+-]([01][0-9]|2[0-3]):[0-5][0-9])$/i.test(
+      input.created_at,
+    );
+  const $io1 = (input) =>
+    "string" === typeof input.name &&
+    /^[a-z0-9]+$/.test(input.name) &&
+    input.name.length <= 255 &&
+    (null === input.extension ||
+      ("string" === typeof input.extension &&
+        /^[a-z0-9]+$/.test(input.extension) &&
+        input.extension.length <= 8)) &&
+    "string" === typeof input.url;
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.id &&
+      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
         input.id,
-      ) &&
-      (null === input.files ||
-        (Array.isArray(input.files) &&
-          input.files.every(
-            (elem) => "object" === typeof elem && null !== elem && $io1(elem),
-          ))) &&
-      (null === input.title ||
-        ("string" === typeof input.title &&
-          5 <= input.title.length &&
-          input.title.length <= 100)) &&
-      "string" === typeof input.body &&
-      "string" === typeof input.created_at &&
-      !isNaN(new Date(input.created_at).getTime());
-    const $io1 = (input) =>
-      "string" === typeof input.name &&
-      /^[a-z0-9]+$/.test(input.name) &&
-      input.name.length <= 255 &&
-      (null === input.extension ||
-        ("string" === typeof input.extension &&
-          /^[a-z0-9]+$/.test(input.extension) &&
-          input.extension.length <= 8)) &&
-      "string" === typeof input.url;
-    return "object" === typeof input && null !== input && $io0(input);
-  };
-  if (false === __is(input))
-    ((input, _path, _exceptionable = true) => {
-      const $guard = typia_1.default.createAssert.guard;
-      const $ao0 = (input, _path, _exceptionable = true) =>
-        (("string" === typeof input.id &&
-          (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-            input.id,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".id",
-              expected: 'string & Format<"uuid">',
-              value: input.id,
-            }))) ||
-          $guard(_exceptionable, {
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".id",
-            expected: '(string & Format<"uuid">)',
+            expected: 'string & Format<"uuid">',
             value: input.id,
-          })) &&
-        (null === input.files ||
-          ((Array.isArray(input.files) ||
-            $guard(_exceptionable, {
-              path: _path + ".files",
-              expected: "(Array<IAttachmentFile> | null)",
-              value: input.files,
-            })) &&
-            input.files.every(
-              (elem, _index1) =>
-                ((("object" === typeof elem && null !== elem) ||
-                  $guard(_exceptionable, {
-                    path: _path + ".files[" + _index1 + "]",
-                    expected: "IAttachmentFile",
-                    value: elem,
-                  })) &&
-                  $ao1(
-                    elem,
-                    _path + ".files[" + _index1 + "]",
-                    true && _exceptionable,
-                  )) ||
-                $guard(_exceptionable, {
-                  path: _path + ".files[" + _index1 + "]",
-                  expected: "IAttachmentFile",
-                  value: elem,
-                }),
-            )) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".id",
+          expected: '(string & Format<"uuid">)',
+          value: input.id,
+        },
+        _errorFactory,
+      )) &&
+    (null === input.files ||
+      ((Array.isArray(input.files) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".files",
             expected: "(Array<IAttachmentFile> | null)",
             value: input.files,
-          })) &&
-        (null === input.title ||
-          ("string" === typeof input.title &&
-            (5 <= input.title.length ||
-              $guard(_exceptionable, {
-                path: _path + ".title",
-                expected: "string & MinLength<5>",
-                value: input.title,
-              })) &&
-            (input.title.length <= 100 ||
-              $guard(_exceptionable, {
-                path: _path + ".title",
-                expected: "string & MaxLength<100>",
-                value: input.title,
-              }))) ||
-          $guard(_exceptionable, {
-            path: _path + ".title",
-            expected: "((string & MinLength<5> & MaxLength<100>) | null)",
-            value: input.title,
-          })) &&
-        ("string" === typeof input.body ||
-          $guard(_exceptionable, {
-            path: _path + ".body",
-            expected: "string",
-            value: input.body,
-          })) &&
-        (("string" === typeof input.created_at &&
-          (!isNaN(new Date(input.created_at).getTime()) ||
-            $guard(_exceptionable, {
-              path: _path + ".created_at",
-              expected: 'string & Format<"date-time">',
-              value: input.created_at,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        )) &&
+        input.files.every(
+          (elem, _index2) =>
+            ((("object" === typeof elem && null !== elem) ||
+              $guard(
+                _exceptionable,
+                {
+                  path: _path + ".files[" + _index2 + "]",
+                  expected: "IAttachmentFile",
+                  value: elem,
+                },
+                _errorFactory,
+              )) &&
+              $ao1(
+                elem,
+                _path + ".files[" + _index2 + "]",
+                true && _exceptionable,
+              )) ||
+            $guard(
+              _exceptionable,
+              {
+                path: _path + ".files[" + _index2 + "]",
+                expected: "IAttachmentFile",
+                value: elem,
+              },
+              _errorFactory,
+            ),
+        )) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".files",
+          expected: "(Array<IAttachmentFile> | null)",
+          value: input.files,
+        },
+        _errorFactory,
+      )) &&
+    (null === input.title ||
+      ("string" === typeof input.title &&
+        (5 <= input.title.length ||
+          $guard(
+            _exceptionable,
+            {
+              path: _path + ".title",
+              expected: "string & MinLength<5>",
+              value: input.title,
+            },
+            _errorFactory,
+          )) &&
+        (input.title.length <= 100 ||
+          $guard(
+            _exceptionable,
+            {
+              path: _path + ".title",
+              expected: "string & MaxLength<100>",
+              value: input.title,
+            },
+            _errorFactory,
+          ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".title",
+          expected: "((string & MinLength<5> & MaxLength<100>) | null)",
+          value: input.title,
+        },
+        _errorFactory,
+      )) &&
+    ("string" === typeof input.body ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".body",
+          expected: "string",
+          value: input.body,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.created_at &&
+      (/^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])(T|\s)([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9](?:\.[0-9]{1,9})?(Z|[+-]([01][0-9]|2[0-3]):[0-5][0-9])$/i.test(
+        input.created_at,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".created_at",
-            expected: '(string & Format<"date-time">)',
+            expected: 'string & Format<"date-time">',
             value: input.created_at,
-          }));
-      const $ao1 = (input, _path, _exceptionable = true) =>
-        (("string" === typeof input.name &&
-          (/^[a-z0-9]+$/.test(input.name) ||
-            $guard(_exceptionable, {
-              path: _path + ".name",
-              expected: 'string & Pattern<"^[a-z0-9]+$">',
-              value: input.name,
-            })) &&
-          (input.name.length <= 255 ||
-            $guard(_exceptionable, {
-              path: _path + ".name",
-              expected: "string & MaxLength<255>",
-              value: input.name,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".created_at",
+          expected: '(string & Format<"date-time">)',
+          value: input.created_at,
+        },
+        _errorFactory,
+      ));
+  const $ao1 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.name &&
+      (/^[a-z0-9]+$/.test(input.name) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".name",
-            expected: '(string & Pattern<"^[a-z0-9]+$"> & MaxLength<255>)',
+            expected: 'string & Pattern<"^[a-z0-9]+$">',
             value: input.name,
-          })) &&
-        (null === input.extension ||
-          ("string" === typeof input.extension &&
-            (/^[a-z0-9]+$/.test(input.extension) ||
-              $guard(_exceptionable, {
-                path: _path + ".extension",
-                expected: 'string & Pattern<"^[a-z0-9]+$">',
-                value: input.extension,
-              })) &&
-            (input.extension.length <= 8 ||
-              $guard(_exceptionable, {
-                path: _path + ".extension",
-                expected: "string & MaxLength<8>",
-                value: input.extension,
-              }))) ||
-          $guard(_exceptionable, {
-            path: _path + ".extension",
-            expected:
-              '((string & Pattern<"^[a-z0-9]+$"> & MaxLength<8>) | null)',
-            value: input.extension,
-          })) &&
-        ("string" === typeof input.url ||
-          $guard(_exceptionable, {
-            path: _path + ".url",
-            expected: "string",
-            value: input.url,
-          }));
-      return (
+          },
+          _errorFactory,
+        )) &&
+      (input.name.length <= 255 ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".name",
+            expected: "string & MaxLength<255>",
+            value: input.name,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".name",
+          expected: '(string & Pattern<"^[a-z0-9]+$"> & MaxLength<255>)',
+          value: input.name,
+        },
+        _errorFactory,
+      )) &&
+    (null === input.extension ||
+      ("string" === typeof input.extension &&
+        (/^[a-z0-9]+$/.test(input.extension) ||
+          $guard(
+            _exceptionable,
+            {
+              path: _path + ".extension",
+              expected: 'string & Pattern<"^[a-z0-9]+$">',
+              value: input.extension,
+            },
+            _errorFactory,
+          )) &&
+        (input.extension.length <= 8 ||
+          $guard(
+            _exceptionable,
+            {
+              path: _path + ".extension",
+              expected: "string & MaxLength<8>",
+              value: input.extension,
+            },
+            _errorFactory,
+          ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".extension",
+          expected: '((string & Pattern<"^[a-z0-9]+$"> & MaxLength<8>) | null)',
+          value: input.extension,
+        },
+        _errorFactory,
+      )) &&
+    ("string" === typeof input.url ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".url",
+          expected: "string",
+          value: input.url,
+        },
+        _errorFactory,
+      ));
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  return (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(true, {
+          $guard(
+            true,
+            {
+              path: _path + "",
+              expected: "IBbsArticle",
+              value: input,
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "IBbsArticle",
             value: input,
-          })) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(true, {
-          path: _path + "",
-          expected: "IBbsArticle",
-          value: input,
-        })
-      );
-    })(input, "$input", true);
-  return input;
-};
-exports.assertArticle = assertArticle;
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
+    return input;
+  };
+})();
 ```
   </Tab>
 </Tabs>
 
-![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/assert.svg)
+![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics/images/assert.svg)
 
 > Measured on [AMD Ryzen 9 7940HS, Rog Flow x13](https://github.com/samchon/typia/tree/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics#assert)
