--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -75,113 +75,145 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assert.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
-const uuid_1 = require("uuid");
-((input) => {
-  const __is = (input) => {
-    return (
-      "object" === typeof input &&
-      null !== input &&
-      "string" === typeof input.id &&
-      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+import typia from "typia";
+import { v4 } from "uuid";
+(() => {
+  const $guard = typia.assert.guard;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100;
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.id &&
+      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
         input.id,
-      ) &&
-      "string" === typeof input.email &&
-      /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100
-    );
-  };
-  if (false === __is(input))
-    ((input, _path, _exceptionable = true) => {
-      const $guard = typia_1.default.assert.guard;
-      const $ao0 = (input, _path, _exceptionable = true) =>
-        (("string" === typeof input.id &&
-          (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-            input.id,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".id",
-              expected: 'string & Format<"uuid">',
-              value: input.id,
-            }))) ||
-          $guard(_exceptionable, {
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".id",
-            expected: '(string & Format<"uuid">)',
+            expected: 'string & Format<"uuid">',
             value: input.id,
-          })) &&
-        (("string" === typeof input.email &&
-          (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-            input.email,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".email",
-              expected: 'string & Format<"email">',
-              value: input.email,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".id",
+          expected: '(string & Format<"uuid">)',
+          value: input.id,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.email &&
+      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+        input.email,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".email",
-            expected: '(string & Format<"email">)',
+            expected: 'string & Format<"email">',
             value: input.email,
-          })) &&
-        (("number" === typeof input.age &&
-          ((Math.floor(input.age) === input.age &&
-            0 <= input.age &&
-            input.age <= 4294967295) ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: 'number & Type<"uint32">',
-              value: input.age,
-            })) &&
-          (19 < input.age ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: "number & ExclusiveMinimum<19>",
-              value: input.age,
-            })) &&
-          (input.age <= 100 ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: "number & Maximum<100>",
-              value: input.age,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".email",
+          expected: '(string & Format<"email">)',
+          value: input.email,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.age &&
+      ((Math.floor(input.age) === input.age &&
+        0 <= input.age &&
+        input.age <= 4294967295) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".age",
-            expected:
-              '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+            expected: 'number & Type<"uint32">',
             value: input.age,
-          }));
-      return (
+          },
+          _errorFactory,
+        )) &&
+      (19 < input.age ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & ExclusiveMinimum<19>",
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (input.age <= 100 ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & Maximum<100>",
+            value: input.age,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".age",
+          expected:
+            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+          value: input.age,
+        },
+        _errorFactory,
+      ));
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  return (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(true, {
+          $guard(
+            true,
+            {
+              path: _path + "",
+              expected: "IMember",
+              value: input,
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "IMember",
             value: input,
-          })) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(true, {
-          path: _path + "",
-          expected: "IMember",
-          value: input,
-        })
-      );
-    })(input, "$input", true);
-  return input;
-})({
-  id: (0, uuid_1.v4)(),
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
+    return input;
+  };
+})()({
+  id: v4(),
   email: "samchon.github@gmail.com",
   age: 18, // wrong, must be greater than 19
 });
@@ -251,117 +283,149 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assertEquals.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
-const uuid_1 = require("uuid");
-((input) => {
-  const __is = (input) => {
-    return (
-      "object" === typeof input &&
-      null !== input &&
-      "string" === typeof input.id &&
-      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+import typia from "typia";
+import { v4 } from "uuid";
+(() => {
+  const $guard = typia.assert.guard;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100;
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.id &&
+      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
         input.id,
-      ) &&
-      "string" === typeof input.email &&
-      /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100
-    );
-  };
-  if (false === __is(input))
-    ((input, _path, _exceptionable = true) => {
-      const $guard = typia_1.default.assert.guard;
-      const $ao0 = (input, _path, _exceptionable = true) =>
-        (("string" === typeof input.id &&
-          (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-            input.id,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".id",
-              expected: 'string & Format<"uuid">',
-              value: input.id,
-            }))) ||
-          $guard(_exceptionable, {
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".id",
-            expected: '(string & Format<"uuid">)',
+            expected: 'string & Format<"uuid">',
             value: input.id,
-          })) &&
-        (("string" === typeof input.email &&
-          (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-            input.email,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".email",
-              expected: 'string & Format<"email">',
-              value: input.email,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".id",
+          expected: '(string & Format<"uuid">)',
+          value: input.id,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.email &&
+      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+        input.email,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".email",
-            expected: '(string & Format<"email">)',
+            expected: 'string & Format<"email">',
             value: input.email,
-          })) &&
-        (("number" === typeof input.age &&
-          ((Math.floor(input.age) === input.age &&
-            0 <= input.age &&
-            input.age <= 4294967295) ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: 'number & Type<"uint32">',
-              value: input.age,
-            })) &&
-          (19 < input.age ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: "number & ExclusiveMinimum<19>",
-              value: input.age,
-            })) &&
-          (input.age <= 100 ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: "number & Maximum<100>",
-              value: input.age,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".email",
+          expected: '(string & Format<"email">)',
+          value: input.email,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.age &&
+      ((Math.floor(input.age) === input.age &&
+        0 <= input.age &&
+        input.age <= 4294967295) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".age",
-            expected:
-              '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+            expected: 'number & Type<"uint32">',
             value: input.age,
-          }));
-      return (
+          },
+          _errorFactory,
+        )) &&
+      (19 < input.age ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & ExclusiveMinimum<19>",
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (input.age <= 100 ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & Maximum<100>",
+            value: input.age,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".age",
+          expected:
+            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+          value: input.age,
+        },
+        _errorFactory,
+      ));
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  return (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(true, {
+          $guard(
+            true,
+            {
+              path: _path + "",
+              expected: "IMember",
+              value: input,
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "IMember",
             value: input,
-          })) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(true, {
-          path: _path + "",
-          expected: "IMember",
-          value: input,
-        })
-      );
-    })(input, "$input", true);
-  return input;
-})({
-  id: (0, uuid_1.v4)(),
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
+    return input;
+  };
+})()({
+  id: v4(),
   email: "samchon.github@gmail.com",
   age: 30,
   sex: 1, // extra
-})
+});
 ```
   </Tab>
 </Tabs>
@@ -482,113 +546,143 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/createAssert.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.assertMember = void 0;
-const typia_1 = __importDefault(require("typia"));
-const assertMember = (input) => {
-  const __is = (input) => {
-    return (
-      "object" === typeof input &&
-      null !== input &&
-      "string" === typeof input.id &&
-      /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+import typia from "typia";
+export const assertMember = (() => {
+  const $guard = typia.createAssert.guard;
+  const $io0 = (input) =>
+    "string" === typeof input.id &&
+    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
+      input.id,
+    ) &&
+    "string" === typeof input.email &&
+    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+      input.email,
+    ) &&
+    "number" === typeof input.age &&
+    Math.floor(input.age) === input.age &&
+    0 <= input.age &&
+    input.age <= 4294967295 &&
+    19 < input.age &&
+    input.age <= 100;
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.id &&
+      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
         input.id,
-      ) &&
-      "string" === typeof input.email &&
-      /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) &&
-      "number" === typeof input.age &&
-      Math.floor(input.age) === input.age &&
-      0 <= input.age &&
-      input.age <= 4294967295 &&
-      19 < input.age &&
-      input.age <= 100
-    );
-  };
-  if (false === __is(input))
-    ((input, _path, _exceptionable = true) => {
-      const $guard = typia_1.default.createAssert.guard;
-      const $ao0 = (input, _path, _exceptionable = true) =>
-        (("string" === typeof input.id &&
-          (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-            input.id,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".id",
-              expected: 'string & Format<"uuid">',
-              value: input.id,
-            }))) ||
-          $guard(_exceptionable, {
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".id",
-            expected: '(string & Format<"uuid">)',
+            expected: 'string & Format<"uuid">',
             value: input.id,
-          })) &&
-        (("string" === typeof input.email &&
-          (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-            input.email,
-          ) ||
-            $guard(_exceptionable, {
-              path: _path + ".email",
-              expected: 'string & Format<"email">',
-              value: input.email,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".id",
+          expected: '(string & Format<"uuid">)',
+          value: input.id,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.email &&
+      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
+        input.email,
+      ) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".email",
-            expected: '(string & Format<"email">)',
+            expected: 'string & Format<"email">',
             value: input.email,
-          })) &&
-        (("number" === typeof input.age &&
-          ((Math.floor(input.age) === input.age &&
-            0 <= input.age &&
-            input.age <= 4294967295) ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: 'number & Type<"uint32">',
-              value: input.age,
-            })) &&
-          (19 < input.age ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: "number & ExclusiveMinimum<19>",
-              value: input.age,
-            })) &&
-          (input.age <= 100 ||
-            $guard(_exceptionable, {
-              path: _path + ".age",
-              expected: "number & Maximum<100>",
-              value: input.age,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".email",
+          expected: '(string & Format<"email">)',
+          value: input.email,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.age &&
+      ((Math.floor(input.age) === input.age &&
+        0 <= input.age &&
+        input.age <= 4294967295) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".age",
-            expected:
-              '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+            expected: 'number & Type<"uint32">',
             value: input.age,
-          }));
-      return (
+          },
+          _errorFactory,
+        )) &&
+      (19 < input.age ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & ExclusiveMinimum<19>",
+            value: input.age,
+          },
+          _errorFactory,
+        )) &&
+      (input.age <= 100 ||
+        $guard(
+          _exceptionable,
+          {
+            path: _path + ".age",
+            expected: "number & Maximum<100>",
+            value: input.age,
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".age",
+          expected:
+            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
+          value: input.age,
+        },
+        _errorFactory,
+      ));
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  return (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(true, {
+          $guard(
+            true,
+            {
+              path: _path + "",
+              expected: "IMember",
+              value: input,
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "IMember",
             value: input,
-          })) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(true, {
-          path: _path + "",
-          expected: "IMember",
-          value: input,
-        })
-      );
-    })(input, "$input", true);
-  return input;
-};
-exports.assertMember = assertMember;
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
+    return input;
+  };
+})();
 ```
   </Tab>
 </Tabs>
@@ -655,16 +749,9 @@ typia.createIs<Map<string, boolean | number | string>>();
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/is-map.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-const typia_1 = __importDefault(require("typia"));
-(input) => {
-  return (
+import typia from "typia";
+(() => {
+  return (input) =>
     input instanceof Map &&
     (() =>
       [...input].every(
@@ -675,9 +762,8 @@ const typia_1 = __importDefault(require("typia"));
           ("string" === typeof elem[1] ||
             "number" === typeof elem[1] ||
             "boolean" === typeof elem[1]),
-      ))()
-  );
-};
+      ))();
+})();
 ```
   </Tab>
 </Tabs>
@@ -745,88 +831,110 @@ interface Something {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assert-custom-tags.js" showLineNumbers
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.assertSomething = void 0;
-const typia_1 = __importDefault(require("typia"));
-const assertSomething = (input) => {
-  const __is = (input) => {
-    return (
-      "object" === typeof input &&
-      null !== input &&
-      "string" === typeof input.dollar &&
-      input.dollar[0] === "$" &&
-      !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
-      "string" === typeof input.postfix &&
-      input.postfix.endsWith("!!!") &&
-      "number" === typeof input.isEven &&
-      input.isEven % 2 === 0
-    );
-  };
-  if (false === __is(input))
-    ((input, _path, _exceptionable = true) => {
-      const $guard = typia_1.default.createAssert.guard;
-      const $ao0 = (input, _path, _exceptionable = true) =>
-        (("string" === typeof input.dollar &&
-          ((input.dollar[0] === "$" &&
-            !isNaN(Number(input.dollar.substring(1).split(",").join("")))) ||
-            $guard(_exceptionable, {
-              path: _path + ".dollar",
-              expected: "string & Dollar",
-              value: input.dollar,
-            }))) ||
-          $guard(_exceptionable, {
+import typia from "typia";
+export const assertSomething = (() => {
+  const $guard = typia.createAssert.guard;
+  const $io0 = (input) =>
+    "string" === typeof input.dollar &&
+    input.dollar[0] === "$" &&
+    !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
+    "string" === typeof input.postfix &&
+    input.postfix.endsWith("!!!") &&
+    "number" === typeof input.isEven &&
+    input.isEven % 2 === 0;
+  const $ao0 = (input, _path, _exceptionable = true) =>
+    (("string" === typeof input.dollar &&
+      ((input.dollar[0] === "$" &&
+        !isNaN(Number(input.dollar.substring(1).split(",").join("")))) ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".dollar",
-            expected: "(string & Dollar)",
+            expected: "string & Dollar",
             value: input.dollar,
-          })) &&
-        (("string" === typeof input.postfix &&
-          (input.postfix.endsWith("!!!") ||
-            $guard(_exceptionable, {
-              path: _path + ".postfix",
-              expected: 'string & Postfix<"!!!">',
-              value: input.postfix,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".dollar",
+          expected: "(string & Dollar)",
+          value: input.dollar,
+        },
+        _errorFactory,
+      )) &&
+    (("string" === typeof input.postfix &&
+      (input.postfix.endsWith("!!!") ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".postfix",
-            expected: '(string & Postfix<"!!!">)',
+            expected: 'string & Postfix<"!!!">',
             value: input.postfix,
-          })) &&
-        (("number" === typeof input.isEven &&
-          (input.isEven % 2 === 0 ||
-            $guard(_exceptionable, {
-              path: _path + ".isEven",
-              expected: "number & IsEven<number>",
-              value: input.isEven,
-            }))) ||
-          $guard(_exceptionable, {
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".postfix",
+          expected: '(string & Postfix<"!!!">)',
+          value: input.postfix,
+        },
+        _errorFactory,
+      )) &&
+    (("number" === typeof input.isEven &&
+      (input.isEven % 2 === 0 ||
+        $guard(
+          _exceptionable,
+          {
             path: _path + ".isEven",
-            expected: "(number & IsEven<number>)",
+            expected: "number & IsEven<number>",
             value: input.isEven,
-          }));
-      return (
+          },
+          _errorFactory,
+        ))) ||
+      $guard(
+        _exceptionable,
+        {
+          path: _path + ".isEven",
+          expected: "(number & IsEven<number>)",
+          value: input.isEven,
+        },
+        _errorFactory,
+      ));
+  const __is = (input) =>
+    "object" === typeof input && null !== input && $io0(input);
+  let _errorFactory;
+  return (input, errorFactory) => {
+    if (false === __is(input)) {
+      _errorFactory = errorFactory;
+      ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(true, {
+          $guard(
+            true,
+            {
+              path: _path + "",
+              expected: "Something",
+              value: input,
+            },
+            _errorFactory,
+          )) &&
+          $ao0(input, _path + "", true)) ||
+        $guard(
+          true,
+          {
             path: _path + "",
             expected: "Something",
             value: input,
-          })) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(true, {
-          path: _path + "",
-          expected: "Something",
-          value: input,
-        })
-      );
-    })(input, "$input", true);
-  return input;
-};
-exports.assertSomething = assertSomething;
+          },
+          _errorFactory,
+        ))(input, "$input", true);
+    }
+    return input;
+  };
+})();
 ```
   </Tab>
 </Tabs>
@@ -841,7 +949,7 @@ Comparing `typia.assert<T>()` function with other competitive libraries, maximum
 
 Furthermore, only `typia` can validate complicate union types.
 
-![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/assert.svg)
+![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics/images/assert.svg)
 
 > Measured on [AMD Ryzen 9 7940HS, Rog Flow x13](https://github.com/samchon/typia/tree/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics#assert)
 
